[deleted] postfix on soft deleted users in post list
